<resources>
    <string name="app_name">Storyapp</string>

    <string name="welcome_back">Welcome back</string>
    <string name="icon_welcome">icon welcome</string>
    <string name="login_headline_1">We happy to see you again. To use your account, you should login first</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_new_account">Create New Account</string>
    <string name="icon_register">icon register</string>
    <string name="register_headline_1">Please fill in the forms to continue</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="error_message">Password must be at least 8 characters</string>
    <string name="validate_login">Please fill in the data completely</string>
    <string name="validate_register">Please fill in the data completely</string>
    <string name="sucess_create_new_account">Account created successfully</string>
    <string name="sucess_login">Login successful</string>
    <string name="menu">Menu</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="open_nav">Open</string>
    <string name="close_nav">Close</string>
    <string name="username">Wildan</string>
    <string name="email_user">Bangkit cohort 2023</string>
    <string name="cooming_soon">Cooming soon!</string>
    <string name="image_profile">Image profile</string>
    <string name="home">Home</string>
    <string name="post_story">Post story</string>
    <string name="back_button_reminder">Please click back again to exit</string>
    <string name="story_app_tag">Story_app_tag</string>
    <string name="info_app_tag">Info_app_tag</string>
    <string name="map_app_tag">Map_app_tag</string>
    <string name="logout_title">Do you want to logout?</string>
    <string name="logout_msg">If you log out then you will return to the login page</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="logout_sucess">Log out successfully</string>
    <string name="story_picture">Story picture</string>
    <string name="desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="title_story">Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_story">image_story</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="camerax">CameraX</string>
    <string name="description">Description</string>
    <string name="camera">camera</string>
    <string name="switch_camera">switch camera</string>
    <string name="failed_camera">Failed to open the camera</string>
    <string name="no_internet">No internet access!</string>
</resources>