<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:id="@+id/main_item">
        <item
            android:id="@+id/mains"
            android:checkable="true"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/map"
            android:checkable="true"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="Maps" />
        <item
            android:id="@+id/info"
            android:checkable="true"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about" />
        <item
            android:id="@+id/logout"
            android:checkable="true"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/logout" />
    </group>
</menu>